--- a/src/app/components/add-order/add-order.component.html
+++ b/src/app/components/add-order/add-order.component.html
@@ -1,1 +1,88 @@
-<p>add-order works!</p>
+<div class="container">
+    <div class="border m-1 p-1">
+        <div class="row p-1">
+            <h3 class="text-center">
+                Add Order Form
+            </h3>
+        </div>
+        <hr>
+
+        <form [formGroup]="addOrderForm" (ngSubmit)="onAddOrder()"> 
+            <div class="row p-1">
+                <div class="form-group mb-3 col-6">
+                    <label> Customer Name </label>
+                    <input type="text" name="customerName" id="customerName" formControlName="customerName" class="form-control" placeholder="Enter Customer Name" required/>
+                    <div *ngIf="submitting && getAllValidations.customerName.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.customerName.errors.required">This field is required</div>
+                    </div>
+                </div>
+                
+                <div class="form-group mb-3 col-6">
+                    <label> Customer Contact Number </label>
+                    <input type="text" class="form-control form-input" formControlName="customerContactNumber" id="customerContactNumber"
+                        name="customerContactNumber" placeholder="Enter customer contact number" />
+                    <div *ngIf="submitting && getAllValidations.customerContactNumber.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.customerContactNumber.errors.required">This field is required</div>
+                    </div>
+                </div>
+                
+                <div class="form-group mb-3 col-6">
+                    <label> Order Date </label>
+                    <input type="date" name="orderDate" id="orderDate" formControlName="orderDate" class="form-control" >
+                    <div *ngIf="submitting && getAllValidations.orderDate.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.orderDate.errors.required">This field is required
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="form-group mb-3 col-6">
+                    <label> Created On </label>
+                    <input type="date" class="form-control" id="createdOn" name="createdOn" formControlName="createdOn">
+                    <div *ngIf="submitting && getAllValidations.createdOn.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.createdOn.errors.required">This field is required
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="form-group mb-3 col-6">
+                    <label> Total Amount </label>
+                    <input type="number" class="form-control" id="totalAmount" name="totalAmount" formControlName="totalAmount">
+                    <div *ngIf="submitting && getAllValidations.totalAmount.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.totalAmount.errors.required">This field is required
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group mb-3 col-6">
+                    <label> Modified On </label>
+                    <input type="date" class="form-control" id="updateOn" name="updateOn" formControlName="updateOn" >
+                    <div *ngIf="submitting && getAllValidations.updateOn.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.updateOn.errors.required">This field is required
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="form-group mb-3 col-6">
+                    <label> IsActive </label>
+                    <input type="checkbox" class="form-check" id="isActive" name="isActive" formControlName="isActive">
+                    <div *ngIf="submitting && getAllValidations.isActive.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.isActive.errors.required">This field is required
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group mb-3 col-6">
+                    <label> Note </label>
+                    <textarea type="textarea" name="note" id="note" class="form-control" formControlName="note" row="3"></textarea>
+                    <div *ngIf="submitting && getAllValidations.note.errors">
+                        <div style="color: red;" *ngIf="getAllValidations.note.errors.required">This field is required
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-outline-success" style="width:30%;"> Add Order </button>
+                <button class="btn btn-outline-secondary" routerLink="/order-list" style="width:30%;margin-left: 10%;">
+                    Back to list </button>
+            </div>
+        </form>
+    </div>
+</div>
