--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,30 +7,38 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/add-address"> Add Address <span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLink="/cart"> <i class="bi bi-cart3"></i>Go to Cart <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/all-lists"> Lists <span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLink="/all-lists"> Address Lists <span
+                        class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/all-lists"> Add Order <span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLink="/order-list"> Order Lists <span class="sr-only">(current)</span></a>
             </li>
         </ul>
+        <div class="navbar-collapse justify-content-end" style="margin-right: 2%;">
+            <li class="nav-item">
+                <a class="btn btn-outline-warning mt-1" (click)="onLogout()"> Logout </a>
+            </li>
+        </div>
     </div>
 </nav>
 
 <!-- Showing Products -->
-<div class="row text-center" style="font-size: 20px;">
-    <h3 style="font-size: 40px;font-style: italic;"> All Products </h3>
-</div>
-<div class="row m-2 p-1">
-<div class="card m-2" style="width: 18rem;" *ngFor="let products of products">
-    <div class="card-body">
-        <h5 class="card-title">{{products.name}}</h5>
-        <p class="card-text">{{products.description}}</p>
+<div class="outer">
+    <div class="row text-center" style="font-size: 20px;">
+        <h3 style="font-size: 40px;font-style: italic;"> All Products </h3>
     </div>
-    <div class="card-body">
-        <a href="#" class="card-link btn btn-secondary">Add To Cart</a>
+    <div class="row m-2 p-1">
+        <div class="card m-2" style="width: 18rem;" *ngFor="let products of products">
+            <div class="card-body">
+                <h5 class="card-title">{{products.name}}</h5>
+                <p class="card-text">{{products.description}}</p>
+            </div>
+            <div class="card-body">
+                <a (click)="onClick(products)" class="card-link btn btn-secondary"><i class="bi bi-cart-plus"></i>Add To Cart</a>
+            </div>
+        </div>
     </div>
-</div>
 </div>
