--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-
+<div class="outer">
 <button class="btn btn-secondary" routerLink="/dashboard" > Back to Dashboard </button>
 <div class="row">
     <h3 class="text-center p-3"> Welcome to Cart! This is your Cart Lists </h3>
@@ -19,9 +19,8 @@
                 <tr>
                     <th> Name </th>
                     <th> Description </th>
-                    <th> Price </th>
                     <th> Quantity </th>
-                    <th> IsActive </th>
+                    <th> Price </th>
                     <th> CreatedOn </th>
                     <th> Actions </th>
                 </tr>
@@ -30,15 +29,25 @@
                 <tr *ngFor="let product of productlist">
                     <td> {{product.name}} </td>
                     <td> {{product.description}} </td>
+                    <td> 
+                        <i class="bi bi-plus-circle" (click)="plusQuantity(product.productId)"></i>
+                        {{product.quantity}} 
+                        <i class="bi bi-dash-circle" (click)="minusQuantity(product.productId)"></i>
+                    </td>
                     <td> {{product.price}} </td>
-                    <td> {{product.quantity}} </td>
-                    <td> {{product.isactive}} </td>
                     <td> {{product.isCreated}} </td>
                     <td>
-                        <button class="btn btn-outline-danger mb-2" (click)="onDelete()"><i class="bi bi-trash3-fill"></i> Delete </button>
+                        <button class="btn btn-outline-danger mb-2" (click)="onDelete()"><i class="bi bi-trash3-fill"></i> Delete </button> 
                     </td>
                 </tr>
             </tbody>
         </table>
+        <select class="form-select col-6 mt-2">
+            <option value="" disabled selected> -------Select Address------ </option>
+            <option *ngFor="let address of addressList">
+                {{address.addressId}}
+            </option>
+        </select>
     </div>
+</div>
 </div>
