--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -37,15 +37,18 @@
                     <td> {{product.price}} </td>
                     <td> {{product.isCreated}} </td>
                     <td>
-                        <button class="btn btn-outline-danger mb-2" (click)="onDelete()"><i class="bi bi-trash3-fill"></i> Delete </button> 
+                        <button class="btn btn-outline-danger mb-2" (click)="onDelete(product.productId)"><i class="bi bi-trash3-fill"></i> Delete </button> 
                     </td>
                 </tr>
             </tbody>
+            <div class="text-end">
+                Total Amount : {{totalAmount}}
+            </div>
         </table>
-        <select class="form-select col-6 mt-2">
+        <select class="form-select col-6 mt-2" id="address" name="address" #Value (change)="onSubmit(Value.value)">
             <option value="" disabled selected> -------Select Address------ </option>
-            <option *ngFor="let address of addressList">
-                {{address.addressId}}
+            <option *ngFor="let address of addressList" value="{{address.addressId}}">
+                {{address.shippingAddress +','+ address.contactNumber + ','+ address.city+','+ address.zipCode}}
             </option>
         </select>
     </div>
